--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,9 @@ $inside-color: rgb(48, 47, 47);
 * {
   box-sizing: border-box;
 }
+a {
+  text-decoration:none;
+}
 input::placeholder {
   color: rgb(168, 168, 168);
   font-size: medium;
@@ -39,7 +42,7 @@ img {
   background-color: $background-color;
   position: fixed;
   width: 100%;
-  height: 120px;
+  height: 100px;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   z-index: 1;
@@ -107,21 +110,20 @@ img {
     }
   }
 }
-.nagivation {
+.navigation {
   float: left;
   height: inherit;
   width: 10%;
   transition: 500ms;
   nav {
-    top: 200px;
-    left: 1%;
+    top: 150px;
+    left: 3%;
     width: 5%;
     height: 500px;
     position: fixed;
     background-color: $inside-color;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    border-bottom-left-radius: 10px;
     border-left: 3px solid $color-logo;
     border-top: 3px solid $color-logo;
     z-index: 2;
@@ -135,6 +137,7 @@ img {
       display: block;
       background-color: rgb(0, 0, 0, 0);
       li {
+        border-top-right-radius: 10px;
         width: 100%;
         height: calc(100% / 6);
         display: flex;
@@ -159,7 +162,7 @@ img {
     }
   }
 }
-.nagivation:hover {
+.navigation:hover {
   width: 400px;
   nav {
     width: 15%;
@@ -169,8 +172,8 @@ img {
   }
 }
 .body {
-  margin-top: 150px;
-  width: 80%;
+  margin-top: 100px;
+  width: 90%;
   .banner {
     padding-left: 5%;
     padding-right: 5%;
@@ -224,7 +227,7 @@ img {
     }
   }
   .films-container {
-    margin-top: 70px;
+    margin-top: 20px;
     .title {
       color: white;
       font-size: xx-large;
@@ -365,7 +368,7 @@ img {
   overflow-y: scroll;
   position: relative;
 }
-@media screen and (max-width: 912px) {
+@media screen and (max-width: 1280px) {
   .body .films-container .films-list {
     grid-template-columns: 1fr 1fr;
   }
@@ -378,7 +381,11 @@ img {
       visibility: hidden;
     }
   }
-  .nagivation {
+  .body {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  .navigation {
     width: 0px;
     nav {
       top: 20px;
@@ -391,8 +398,8 @@ img {
       li:first-child {
         visibility: visible;
       }
-      pointer-events:none;
     }
+    pointer-events:none;
   }
   .popup {
     width: 90%;
