--- a/src/App.scss
+++ b/src/App.scss
@@ -2,17 +2,68 @@
 $color-logo: rgb(184, 4, 4);
 $background-color: rgb(17, 17, 17);
 $inside-color: rgb(48, 47, 47);
+.contact {
+  width: 100%;
+  height: 100%;
+  margin: 100px 10% 10%;
+  h1 {
+    color: white;
+  }
+  form {
+    border: 3px solid $color-logo;
+    margin-left: 25%;
+    margin-right: 25%;
+    height: 500px;
+    border-radius: 20px;
+  }
+
+  label {
+    display: block;
+    font-weight: bold;
+    margin-top: 20px;
+    color: white;
+    margin-left: 10%;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  input[type="submit"] {
+    background-color: #4caf50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    margin-right: 10%;
+
+    &:hover {
+      background-color: #45a049;
+    }
+  }
+}
 * {
   box-sizing: border-box;
 }
 a {
-  text-decoration:none;
+  text-decoration: none;
 }
 input::placeholder {
   color: rgb(168, 168, 168);
   font-size: medium;
 }
-.home {
+.main {
   display: flex;
   background-color: $background-color;
 }
@@ -23,20 +74,6 @@ img {
   object-position: center;
   border-radius: inherit;
 }
-.material-icons {
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-  vertical-align: baseline;
-}
 
 .header {
   background-color: $background-color;
@@ -45,7 +82,7 @@ img {
   height: 100px;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  z-index: 1;
+  z-index: 2;
   .logo-place {
     position: relative;
     .switch-mode {
@@ -133,7 +170,7 @@ img {
       position: relative;
       height: 100%;
       list-style-type: none;
-      margin: 0px;
+      margin: 2px 0px;
       display: block;
       background-color: rgb(0, 0, 0, 0);
       li {
@@ -171,7 +208,7 @@ img {
     }
   }
 }
-.body {
+.home {
   margin-top: 100px;
   width: 90%;
   .banner {
@@ -209,7 +246,7 @@ img {
       }
     }
     .context:hover {
-      background-color: rgba(255, 255, 255, 0.2);
+      background-color: rgba(0, 0, 0, 0.2);
       .button {
         visibility: visible;
         position: relative;
@@ -229,16 +266,16 @@ img {
   .films-container {
     margin-top: 20px;
     .title {
+      padding-left: 5%;
       color: white;
       font-size: xx-large;
-      padding-left: 5%;
       border-left: 10px solid orangered;
     }
     .films-list {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: repeat( 1, 500px);
-      margin: 40px 5% 5%;
+      grid-template-rows: repeat(1, 500px);
+      margin: 40px 10%;
       .card {
         margin: 20px;
         position: relative;
@@ -295,11 +332,10 @@ img {
             margin-top: 180px;
             visibility: visible;
             margin-left: 45%;
-            background-color: white;
             border-radius: 50%;
             .detail {
               visibility: visible;
-              font-size: 40px;
+              font-size: 60px;
               color: orangered;
             }
           }
@@ -368,20 +404,83 @@ img {
   overflow-y: scroll;
   position: relative;
 }
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 40px 0;
+
+  .footer-content {
+    display: flex;
+    justify-content: space-evenly;
+    .footer-links {
+      margin-right: 30px;
+      a {
+        margin-top: 20px;
+        display: block;
+        color: #fff;
+        margin-right: 20px;
+        font-size: x-large;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  
+    .social-media-icons {
+      
+      a {
+        margin-top: 20px;
+        color: #fff;
+        margin-right: 20px;
+        display: block;
+        font-size: x-large;
+        &:hover {
+          transform: translateY(-3px);
+        }
+      }
+    }
+    
+  }
+}
+.details {
+  margin: 150px ;
+  width: 80%;
+  height: 500px;
+  z-index: 1;
+  color: white;
+  display: flex;
+  img {
+    width: 60%;
+    object-fit: cover;
+    object-position: center;
+  }
+  background-color: $inside-color;
+  border: 2px solid $color-logo;
+  border-radius: 10px;
+  .content{
+    margin-left: 2%;
+    .text {
+      margin-top: 20px;
+      font-size: 18px;
+      margin-right: 10%;
+    }
+  }
+
+}
 @media screen and (max-width: 1280px) {
-  .body .films-container .films-list {
+  .home .films-container .films-list {
     grid-template-columns: 1fr 1fr;
   }
   .header {
     grid-template-columns: 1fr 3fr 1fr;
-    .logo-place{
+    .logo-place {
       visibility: hidden;
     }
     .login-user {
       visibility: hidden;
     }
   }
-  .body {
+  .home {
     margin-left: 10%;
     margin-right: 10%;
   }
@@ -399,19 +498,19 @@ img {
         visibility: visible;
       }
     }
-    pointer-events:none;
+    pointer-events: none;
   }
   .popup {
     width: 90%;
   }
 }
 @media screen and (max-width: 600px) {
-  .body .films-container .films-list {
+  .home .films-container .films-list {
     grid-template-columns: 1fr;
   }
   .header {
     grid-template-columns: 1fr;
-    .logo-place{
+    .logo-place {
       display: none;
     }
     .login-user {
