--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+// @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 $color-logo: rgb(184, 4, 4);
 $background-color: rgb(17, 17, 17);
 $inside-color: rgb(48, 47, 47);
@@ -119,6 +119,7 @@ img {
         font-size: medium;
         border-radius: 50px;
       }
+      
       .search-submit {
         position: relative;
         height: 100%;
@@ -468,8 +469,10 @@ img {
 
 }
 @media screen and (max-width: 1280px) {
-  .home .films-container .films-list {
-    grid-template-columns: 1fr 1fr;
+  .home .films-container {
+    .films-list {
+      grid-template-columns: 1fr 1fr;
+    }
   }
   .header {
     grid-template-columns: 1fr 3fr 1fr;
@@ -480,10 +483,6 @@ img {
       visibility: hidden;
     }
   }
-  .home {
-    margin-left: 10%;
-    margin-right: 10%;
-  }
   .navigation {
     width: 0px;
     nav {
@@ -491,22 +490,54 @@ img {
       border: 0px;
       background-color: rgb(0, 0, 0, 0);
       left: 5%;
+    }
+    li {
+      visibility: hidden;
+    }
+    .first {
+      visibility: visible;
+    }
+  }
+  .navigation:hover {
+    background-color: $background-color;
+    nav {
+      background-color: $inside-color;
       li {
-        visibility: hidden;
-      }
-      li:first-child {
         visibility: visible;
       }
+      width: 200px;
     }
-    pointer-events: none;
   }
   .popup {
     width: 90%;
+  }
+  .details {
+    margin: 150px 10%;
+    display: block;
+    height: max-content;
+    padding-bottom: 10px;
+    img {
+      object-fit: cover;
+      object-position: center;
+      width: 100%;
+      height: 50%;
+    }
+  }
+  .contact {
+    form {
+      margin: 0px;
+    }
+  }
+  .home {
+    margin-left:  5%;
   }
 }
 @media screen and (max-width: 600px) {
   .home .films-container .films-list {
     grid-template-columns: 1fr;
+  }
+  .films-container {
+    width: 100%;
   }
   .header {
     grid-template-columns: 1fr;
