--- a/src/App.scss
+++ b/src/App.scss
@@ -2,62 +2,110 @@
 $color-logo: rgb(184, 4, 4);
 $background-color: rgb(17, 17, 17);
 $inside-color: rgb(48, 47, 47);
+.news{
+  width: 90%;
+  height: fit-content;
+  margin-top: 120px;
+  .title {
+    padding-left: 5%;
+    color: white;
+    font-size: xx-large;
+    border-left: 10px solid orangered;
+  }
+  .card {
+    height: 350px;
+    background-color: $background-color;
+    box-shadow: none;
+    color: white;
+    border-bottom: 1px solid $color-logo;
+    margin: 40px 30% 40px 15%;
+    padding-bottom: 50px;
+    img {
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      padding-top: 10px;
+    }
+    .card-content {
+      padding: 0px 0px 0px 10%  ;
+    }
+    .card-action {
+      display: none;
+    }
+    .card-title {
+      font-size: x-large;
+      font-weight: 700;
+    }
+    .by {
+      padding-top: 10px;
+    }
+    .description {
+      padding-top: 20px;
+      display: block;
+      display: -webkit-box;
+      max-width: 100%;
+      margin: 0 auto;
+      font-size: medium;
+      line-height: 1.2;
+      -webkit-line-clamp: 6;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+}
+.about {
+  width: 100%;
+  height: 100%;
+  margin: 100px 10% 10%;
+  ul {
+    margin-left: 25%;
+    margin-right: 25%;
+    height: 500px;
+    font-size: x-large;
+    .collapsible-body {
+      background-color: white;
+    }
+  }
+}
 .contact {
   width: 100%;
   height: 100%;
   margin: 100px 10% 10%;
-  h1 {
+  h3 {
     color: white;
   }
   form {
     border: 3px solid $color-logo;
     margin-left: 25%;
     margin-right: 25%;
-    height: 500px;
+    height: fit-content;
     border-radius: 20px;
-  }
-
-  label {
-    display: block;
-    font-weight: bold;
-    margin-top: 20px;
-    color: white;
-    margin-left: 10%;
-  }
-
-  input[type="text"],
-  input[type="email"],
-  textarea {
-    width: 80%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    margin-left: 10%;
-    margin-right: 10%;
-  }
-
-  input[type="submit"] {
-    background-color: #4caf50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-    margin-right: 10%;
-
-    &:hover {
-      background-color: #45a049;
+    padding: 0px 5% 2% 5%;
+    .name {
+      display: grid;
+      grid-template-columns: 5fr 1fr 5fr;
+    }
+    i {
+      color: white;
+    }
+    ::placeholder {
+      padding: 5px;
+    }
+    #Textarea-68, #TextInput-132, #Textarea-146 {
+      background-color: rgb(0, 0, 0, 0);
+      border-bottom: 2px solid white;
+      color: white;
+      box-shadow: none;
+    }
+    label[for="Textarea-68"], [for="TextInput-132"] {
+      color: white;
+      font-size: medium;
     }
   }
 }
 * {
   box-sizing: border-box;
-}
-a {
-  text-decoration: none;
 }
 input::placeholder {
   color: rgb(168, 168, 168);
@@ -119,7 +167,7 @@ img {
         font-size: medium;
         border-radius: 50px;
       }
-      
+
       .search-submit {
         position: relative;
         height: 100%;
@@ -166,10 +214,11 @@ img {
     border-top: 3px solid $color-logo;
     z-index: 2;
     transition: 500ms;
+    box-shadow: none;
     ul {
       padding-left: 20%;
       position: relative;
-      height: 100%;
+      height: inherit;
       list-style-type: none;
       margin: 2px 0px;
       display: block;
@@ -177,25 +226,31 @@ img {
       li {
         border-top-right-radius: 10px;
         width: 100%;
-        height: calc(100% / 6);
         display: flex;
         transition: 200ms;
-        .nav {
-          margin-top: 20px;
-          font-size: xx-large;
-          color: white;
-        }
+        height: calc(495px/6);
         .text {
           visibility: hidden;
           font-size: x-large;
           color: white;
-          padding-top: 17px;
           padding-left: 13%;
           transition-delay: 200ms;
         }
+        .nav {
+          font-size: xx-large;
+          color: white;
+          padding-top: 17px;
+        }
       }
-      li:hover {
-        background-color: rgb(255, 72, 0);
+      a {
+        text-decoration: none;
+        padding: 0px;
+        margin: 0px;
+        box-sizing: border-box;
+        display: block;
+        li:hover {
+          background-color: rgb(255, 72, 0);
+        }
       }
     }
   }
@@ -225,6 +280,7 @@ img {
       position: relative;
       border: 2px solid $color-logo;
       border-radius: 60px;
+      opacity: 1;
       img {
         position: absolute;
       }
@@ -411,10 +467,10 @@ img {
   padding: 40px 0;
 
   .footer-content {
-    display: flex;
-    justify-content: space-evenly;
     .footer-links {
       margin-right: 30px;
+      display: flex;
+      justify-content: space-between;
       a {
         margin-top: 20px;
         display: block;
@@ -426,25 +482,10 @@ img {
         }
       }
     }
-  
-    .social-media-icons {
-      
-      a {
-        margin-top: 20px;
-        color: #fff;
-        margin-right: 20px;
-        display: block;
-        font-size: x-large;
-        &:hover {
-          transform: translateY(-3px);
-        }
-      }
-    }
-    
   }
 }
 .details {
-  margin: 150px ;
+  margin: 150px;
   width: 80%;
   height: 500px;
   z-index: 1;
@@ -458,7 +499,7 @@ img {
   background-color: $inside-color;
   border: 2px solid $color-logo;
   border-radius: 10px;
-  .content{
+  .content {
     margin-left: 2%;
     .text {
       margin-top: 20px;
@@ -466,7 +507,6 @@ img {
       margin-right: 10%;
     }
   }
-
 }
 @media screen and (max-width: 1280px) {
   .home .films-container {
@@ -529,7 +569,7 @@ img {
     }
   }
   .home {
-    margin-left:  5%;
+    margin-left: 5%;
   }
 }
 @media screen and (max-width: 600px) {
