--- a/src/App.scss
+++ b/src/App.scss
@@ -200,6 +200,17 @@ img {
     }
   }
 }
+.modal-show {
+  background-color: rgba(0, 0, 0, 0.2);
+  width: 100vw;
+  height: 100vmax;
+  z-index: 99;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  overflow: hidden; 
+}
 .navigation {
   float: left;
   height: inherit;
@@ -209,7 +220,7 @@ img {
     top: 150px;
     left: 3%;
     width: 5%;
-    height: 700px;
+    height: 500px;
     position: fixed;
     background-color: $inside-color;
     border-top-left-radius: 10px;
@@ -333,29 +344,39 @@ img {
         rgba(0, 0, 0, 0.6),
         rgba(0, 0, 0, 0)
       );
+      position: relative;
+      height: inherit;
+      border-radius: inherit;
+      transition: 200ms;
       .title {
-        padding-top: 100px;
+        position: relative;
+        top: 120px;
         text-align: center;
         width: 30%;
         color: white;
         font-size: 30px;
         font-weight: 900;
-        margin-bottom: 5%;
-      }
+        height: 90px;
+      } 
       .infor {
+        position: relative;
         text-align: justify;
+        display: -webkit-box;
+        top: 150px;
         width: 25%;
         padding-left: 5%;
+        height: 120px;
         color: white;
         font-size: medium;
+        line-height: 1.2;
+        -webkit-line-clamp: 6;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
-      position: relative;
-      height: inherit;
-      border-radius: inherit;
-      transition: 200ms;
       .button-place {
         position: relative;
-        top: 450px;
+        top: 240px;
         text-align: right;
         margin-right: 5%;
         .button {
@@ -450,12 +471,17 @@ img {
           .button {
             margin-top: 180px;
             visibility: visible;
-            margin-left: 45%;
+            margin-left: 40%;
             border-radius: 50%;
             .detail {
               visibility: visible;
               font-size: 60px;
-              color: orangered;
+              background-color: orangered;
+              color: white;
+              border-radius: 50%;
+            }
+            .detail:hover {
+              box-shadow: 0px 0px 5px white;
             }
           }
         }
@@ -548,7 +574,7 @@ img {
 }
 .details {
   margin: 150px;
-  width: 80%;
+  width: 100%;
   height: 500px;
   z-index: 1;
   color: white;
