--- a/src/App.scss
+++ b/src/App.scss
@@ -201,15 +201,56 @@ img {
   }
 }
 .modal-show {
-  background-color: rgba(0, 0, 0, 0.2);
-  width: 100vw;
-  height: 100vmax;
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 99;
-  top: 50%;
+  width: 100vw;
+  height: 100vh;
   left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
-  position: absolute;
-  overflow: hidden; 
+  position: fixed;
+  .modal {
+    overflow: hidden;
+    display: block;
+    margin-top: 200px;
+    background-color: $inside-color;
+    border-radius: 10px;
+    border: 1px solid $color-logo;
+    height: fit-content;
+    .modal-content {
+      padding: 0px;
+      iframe {
+        width: 98%;
+        height: 450px;
+        margin: 1%;
+      }
+    }
+    .modal-footer {
+      padding: 0px;
+      width: 100%;
+      height: 50px;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      border-bottom-left-radius: inherit;
+      button {
+        border: none;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $inside-color;
+      }
+      .download:hover {
+        background-color: #015801;
+      }
+      .wishlist:hover {
+        background-color: #92011b;
+      }
+      .exit:hover {
+        background-color: #ad0101;
+      }
+    }
+  }
 }
 .navigation {
   float: left;
@@ -351,13 +392,15 @@ img {
       .title {
         position: relative;
         top: 120px;
-        text-align: center;
-        width: 30%;
+        width: 25%;
         color: white;
         font-size: 30px;
         font-weight: 900;
         height: 90px;
-      } 
+        line-height: 1.2;
+        padding-left: 5%;
+        text-align: left;
+      }
       .infor {
         position: relative;
         text-align: justify;
@@ -573,6 +616,7 @@ img {
   }
 }
 .details {
+  position: relative;
   margin: 150px;
   width: 100%;
   height: 500px;
@@ -594,11 +638,6 @@ img {
       font-size: 18px;
       margin-right: 10%;
     }
-  }
-  a {
-    top: 600px;
-    left: 60%;
-    position: relative;
   }
 }
 @media screen and (max-width: 1280px) {
