--- a/src/App.scss
+++ b/src/App.scss
@@ -106,6 +106,7 @@ $inside-color: rgb(48, 47, 47);
       color: white;
       font-size: medium;
     }
+
   }
 }
 * {
@@ -126,80 +127,62 @@ img {
   object-position: center;
   border-radius: inherit;
 }
-
 .header {
-  background-color: $background-color;
   position: fixed;
   width: 100%;
-  height: 100px;
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  height: 120px;
   z-index: 2;
-  .logo-place {
-    position: relative;
-    .switch-mode {
-      margin-right: 20%;
-    }
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  a {
+    width: fit-content;
+    display: block;
+    text-align: center;
+    margin-left: 30%;
     .logo {
-      font-size: 80px;
-      margin: 20px 30% 20px;
+      font-size: 70px;
       color: $color-logo;
     }
   }
-  .search-box {
-    position: relative;
-    text-align: center;
-    .search-box-form {
-      position: relative;
-      margin-top: 30px;
-      margin-bottom: 30px;
-      height: 60px;
-      width: 60%;
-      margin-left: 20%;
-      margin-right: 20%;
+  form {
+    display: flex;
+    margin-left: 25%;
+    margin-right: 25%;
+    input {
+      border: none;
+      width: 80%;
+      border-top-left-radius: 70px;
+      border-bottom-left-radius: 70px;
       border: 2px solid $color-logo;
-      border-radius: 50px;
-      background-color: $inside-color;
-      .search-text {
-        padding-left: 10%;
-        height: 100%;
-        box-shadow: none;
-        border: 0px;
-        width: 80%;
-        color: white;
-        background-color: rgb(0, 0, 0, 0);
-        font-size: medium;
-        border-radius: 50px;
-      }
-
-      .search-submit {
-        position: relative;
-        height: 100%;
-        background-color: rgb(0, 0, 0, 0);
-        border: 0px;
-        width: 20%;
-        z-index: 2;
-      }
-      .search {
-        position: fixed;
-        left: 61.5%;
-        top: 40px;
-        font-size: 35px;
-        color: $color-logo;
-        z-index: 1;
-      }
+      border-right: none ;
+      padding-left: 10%;
+      color: white;
+      margin-bottom: 0px;
+      height: 60px;
+    }
+    span {
+      border-top-right-radius: 70px;
+      border-bottom-right-radius: 70px;
+      border: 2px solid $color-logo;
+      border-left: none ;
+      width: 20%;
+      display: block;
+      text-align: center;
+      padding-top: 15px;
+      color: $color-logo;
+      font-size: xx-large;
     }
   }
-  .login-user {
-    position: relative;
+ .login-user {
     text-align: center;
     .login {
+      font-size: 50px;
       color: $color-logo;
-      font-size: 40px;
-      margin: 35px;
     }
   }
 }
+
 .modal-show {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 99;
@@ -648,7 +631,7 @@ img {
   }
   .header {
     grid-template-columns: 1fr 3fr 1fr;
-    .logo-place {
+    .switch-mode {
       visibility: hidden;
     }
     .login-user {
@@ -674,6 +657,9 @@ img {
     background-color: $background-color;
     nav {
       background-color: $inside-color;
+      border: 2px solid $color-logo;
+      border-right: none;
+      border-bottom: none;
       li {
         visibility: visible;
       }
@@ -713,7 +699,7 @@ img {
   }
   .header {
     grid-template-columns: 1fr;
-    .logo-place {
+    .switch-mode {
       display: none;
     }
     .login-user {
